--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "router-dom": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
